New style implemented

--- a/src/app/components/middle-square/middle-square.component.html
+++ b/src/app/components/middle-square/middle-square.component.html
@@ -1,7 +1,40 @@
-<p>Cuadrados medios</p>
-    <input class="form-control mr-sm-2" type="search" placeholder="Semilla" aria-label="Search"  #seed>
-    <input class="form-control mr-sm-2" type="search" placeholder="Cantidad de números" aria-label="Search" #quantity>
-    <button (click)="middle_square(seed.value, quantity.value)" class="btn btn-outline-primary my-2 my-sm-0" type="button">Generar aleatorios</button>
-    <div *ngFor="let number of result; let i = index">
-        {{i+1}}.-{{number}}
-    </div>
+<div class="container-right">
+
+<span class="text-4xl">Cuadrados medios</span>
+  <!--<mat-form-field class="example-full-width">
+    <mat-label>Semilla</mat-label>
+    <input matInput placeholder="1234">
+  </mat-form-field>-->
+
+  <div class="input-container flex justify-between mt-5">
+  <mat-form-field appearance="outline" class="input w-1/2 mr-5">
+    <mat-label>Semilla</mat-label>
+    <input matInput placeholder="1234" #seed>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline" class="input w-1/2 ml-5">
+    <mat-label>Cantidad de números random</mat-label>
+    <input matInput placeholder="10" #quantity>
+  </mat-form-field>
+</div>
+
+    <button (click)="middle_square(seed.value, quantity.value)" mat-raised-button color="accent">Generar aleatorios</button>
+    
+    <table class="table-fixed m-auto mt-5">
+        <thead>
+          <tr>
+            <th class="w-1/4 px-4 py-2">Semilla</th>
+            <th class="w-1/4 px-4 py-2">No. Aleatorio</th>
+            <th class="w-1/4 px-4 py-2">Random Ri</th>
+          </tr>
+        </thead>
+        <tbody *ngFor="let number of result; let i = index">
+          <tr>
+            <td class="border px-4 py-2">X{{i}} = {{semilla[i]}}</td>
+            <td class="border px-4 py-2">X{{i+1}} = {{number}}</td>
+            <td class="border px-4 py-2">R{{i+1}} = {{number}}</td>
+          </tr>
+        </tbody>
+      </table>
+
+</div>
