--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,3 @@
-<p>home works!</p>
 <mat-sidenav-container
     class="example-container" (backdropClick)="close('backdrop')">
   <mat-sidenav #sidenav (keydown.escape)="close('escape')" disableClose>
@@ -20,13 +19,10 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <p><button mat-button (click)="sidenav.open()">Abrir menú</button></p>
-    <p>Hola</p>
-    <app-middle-square *ngIf="openMiddleSquare"></app-middle-square>
+    
+      <p><button mat-button (click)="sidenav.open()">Abrir menú</button></p>
+      <div class="container">
+        <app-middle-square *ngIf="!openMiddleSquare"></app-middle-square>
+      </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<p>home works!</p>
-<p>home works!</p>
-<p>home works!</p>
-<p>home works!</p>
