--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,4 +1,6 @@
 .example-container {
+  background: #1F2327;
+  color: #ffffff;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -7,5 +9,13 @@
   }
   
   mat-sidenav {
+    color: #ffffff;
     width: 200px;
+    background: #16191C;
   }
+
+.container{
+padding: 20px;
+padding-top: 0px;
+  
+}
