--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,7 +22,8 @@
     
       <p><button mat-button (click)="sidenav.open()">Abrir menú</button></p>
       <div class="container">
-        <app-middle-square *ngIf="!openMiddleSquare"></app-middle-square>
+        <!--<app-middle-square *ngIf="!openMiddleSquare"></app-middle-square>-->
+        <app-congruencial></app-congruencial>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
