--- a/src/app/components/middle-square/middle-square.component.html
+++ b/src/app/components/middle-square/middle-square.component.html
@@ -31,7 +31,7 @@
         <tbody *ngFor="let number of result; let i = index">
           <tr>
             <td class="border px-4 py-2">X{{i}} = {{semilla[i]}}</td>
-            <td class="border px-4 py-2">X{{i+1}} = {{number}}</td>
+            <td class="border px-4 py-2">X{{i+1}} = {{random[i]}}</td>
             <td class="border px-4 py-2">R{{i+1}} = {{number}}</td>
           </tr>
         </tbody>
