--- a/src/app/components/middle-square/middle-square.component.html
+++ b/src/app/components/middle-square/middle-square.component.html
@@ -1,6 +1,6 @@
 <div class="container-right">
 
-<span class="text-4xl">Cuadrados medios</span>
+<span class="text-4xl mt-5 block">Cuadrados medios</span>
   <!--<mat-form-field class="example-full-width">
     <mat-label>Semilla</mat-label>
     <input matInput placeholder="1234">
