--- a/src/app/components/congruencial/congruencial.component.html
+++ b/src/app/components/congruencial/congruencial.component.html
@@ -1,6 +1,6 @@
 <div class="container-right">
 
-    <span class="text-4xl">Método congruencial</span>
+    <span class="text-4xl mt-5 block">Método congruencial</span>
       <!--<mat-form-field class="example-full-width">
         <mat-label>Semilla</mat-label>
         <input matInput placeholder="1234">
