--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item mt-5" routerLinkActive="active">
           <button mat-raised-button (click)="open('congruencial-mixto')">Congruencial mixto</button>
         </li>
+        <li class="nav-item mt-5" routerLinkActive="active">
+          <button mat-raised-button (click)="open('multiplicativo')">Generador multiplicativo</button>
+        </li>
         
       </ul>
 
@@ -29,6 +32,7 @@
         <app-middle-square *ngIf="openMiddleSquare"></app-middle-square>
         <app-congruencial *ngIf="openCongruencial"></app-congruencial>
         <app-congruencial-mixto *ngIf="openCongruencialMixto"></app-congruencial-mixto>
+        <app-multiplicativo *ngIf="openMultiplicativo"></app-multiplicativo>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
