--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,6 +18,9 @@
         <li class="nav-item mt-5" routerLinkActive="active">
           <button mat-raised-button (click)="open('multiplicativo')">Generador multiplicativo</button>
         </li>
+        <li class="nav-item mt-5" routerLinkActive="active">
+          <button mat-raised-button (click)="open('lineal-combinado')">Congruencial lineal combinado</button>
+        </li>
         
       </ul>
 
@@ -33,6 +36,7 @@
         <app-congruencial *ngIf="openCongruencial"></app-congruencial>
         <app-congruencial-mixto *ngIf="openCongruencialMixto"></app-congruencial-mixto>
         <app-multiplicativo *ngIf="openMultiplicativo"></app-multiplicativo>
+        <app-congruencial-lineal-combinado *ngIf="openLinealCombinado"></app-congruencial-lineal-combinado>
       </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
