--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,6 +1,6 @@
 .example-container {
-  background: #1F2327;
-  color: #ffffff;
+    //background: #1F2327;
+    //color: #ffffff;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -9,13 +9,13 @@
   }
   
   mat-sidenav {
-    color: #ffffff;
-    width: 200px;
-    background: #16191C;
+    //color: #ffffff;
+    width: 300px;
+    //background: #16191C;
   }
 
 .container{
-padding: 20px;
-padding-top: 0px;
+  padding: 20px;
+  padding-top: 0px;
   
 }
