--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ body { margin: 0; font-family: 'Josefin Sans', sans-serif; }
  .success-snackbar {
     background: #4cb050;
     color: white;
+    top: 0;
 }
 
 .alert-snackbar {
