--- a/src/app/components/congruencial/congruencial.component.html
+++ b/src/app/components/congruencial/congruencial.component.html
@@ -1,82 +1,84 @@
 <div class="container-right">
 
-    <span class="text-4xl mt-5 block">Método congruencial</span>
-      <!--<mat-form-field class="example-full-width">
-        <mat-label>Semilla</mat-label>
-        <input matInput placeholder="1234">
-      </mat-form-field>-->
-    
-      <div class="input-container flex justify-between mt-5">
-      <mat-form-field appearance="outline" class="input w-1/2 mr-5">
-        <mat-label>Semilla</mat-label>
-        <input matInput placeholder="4" #seed>
+  <span class="text-4xl mt-5 block">Método congruencial</span>
+    <!--<mat-form-field class="example-full-width">
+      <mat-label>Semilla</mat-label>
+      <input matInput placeholder="1234">
+    </mat-form-field>-->
+  
+    <div class="input-container flex justify-between mt-5">
+    <mat-form-field appearance="outline" class="input w-1/2 mr-5">
+      <mat-label>Semilla</mat-label>
+      <input matInput placeholder="4" #seed>
+    </mat-form-field>
+  
+    <mat-form-field appearance="outline" class="input w-1/2 ml-5">
+      <mat-label>Cantidad de números random</mat-label>
+      <input matInput placeholder="10" #quantity>
+    </mat-form-field>
+  </div>
+
+  <div class="input-container flex justify-between">
+      <mat-form-field appearance="outline" class="input w-1/3 mr-5">
+        <mat-label>Valor de a</mat-label>
+        <input matInput placeholder="5" #a>
       </mat-form-field>
     
-      <mat-form-field appearance="outline" class="input w-1/2 ml-5">
-        <mat-label>Cantidad de números random</mat-label>
-        <input matInput placeholder="10" #quantity>
+      <mat-form-field appearance="outline" class="input w-1/3 ml-5 mr-5">
+        <mat-label>Valor de c</mat-label>
+        <input matInput placeholder="7" #c>
       </mat-form-field>
+
+      <mat-form-field appearance="outline" class="input w-1/3 ml-5">
+          <mat-label>Valor de m</mat-label>
+          <input matInput placeholder="8" #m>
+        </mat-form-field>
+
     </div>
+    <div class="flex">         
+      <button class="h-10" (click)="congruencial(seed.value, quantity.value, a.value, c.value, m.value)" mat-raised-button color="accent">Generar aleatorios</button>
 
-    <div class="input-container flex justify-between">
-        <mat-form-field appearance="outline" class="input w-1/3 mr-5">
-          <mat-label>Valor de a</mat-label>
-          <input matInput placeholder="5" #a>
+      <div class="block ml-5 test-container" id="chi-container" style="height: fit-content;">
+        <mat-checkbox (change)="onChange($event, 'chi')" class="block m-2">Realizar prueba Chi-Cuadrada</mat-checkbox>
+        <mat-form-field *ngIf="validChi" appearance="outline" class="input block m-2">
+          <mat-label>Aceptación del %</mat-label>
+          <input matInput name="errorChi" placeholder="5" value="5" [(ngModel)]="errorChi">
         </mat-form-field>
-      
-        <mat-form-field appearance="outline" class="input w-1/3 ml-5 mr-5">
-          <mat-label>Valor de c</mat-label>
-          <input matInput placeholder="7" #c>
-        </mat-form-field>
+        <span class="block text-center" style="margin-top: -20px;" *ngIf="chiResult == true">Es válida</span>
+        <span class="block text-center" style="margin-top: -20px;" *ngIf="chiResult == false">No es válida</span>
+      </div>
 
-        <mat-form-field appearance="outline" class="input w-1/3 ml-5">
-            <mat-label>Valor de m</mat-label>
-            <input matInput placeholder="8" #m>
-          </mat-form-field>
+      <div class="block ml-5 test-container" id="kolmogorov-container" style="height: fit-content;">
+        <mat-checkbox (change)="onChange($event, 'kolmogorov')" class="block m-2">Realizar prueba Kolmogorov-Smirnov</mat-checkbox>
+        <mat-form-field *ngIf="validKolmogorov" appearance="outline" class="input block m-2">
+          <mat-label>Aceptación del %</mat-label>
+          <input matInput name="errorKol" placeholder="5" value="10" [(ngModel)]="errorKol">
+        </mat-form-field>
+        
+        <span class="block text-center" style="margin-top: -20px;" *ngIf="kolResult == true">Es válida</span>
+        <span class="block text-center" style="margin-top: -20px;" *ngIf="kolResult == false">No es válida</span>
 
       </div>
-      <div class="flex">         
-        <button class="h-10" (click)="congruencial(seed.value, quantity.value, a.value, c.value, m.value)" mat-raised-button color="accent">Generar aleatorios</button>
 
-        <div class="block ml-5 test-container" id="chi-container" style="height: fit-content;">
-          <mat-checkbox (change)="onChange($event, 'chi')" class="block m-2">Realizar prueba Chi-Cuadrada</mat-checkbox>
-          <mat-form-field *ngIf="validChi" appearance="outline" class="input block m-2">
-            <mat-label>Aceptación del %</mat-label>
-            <input matInput name="errorChi" placeholder="5" value="5" [(ngModel)]="errorChi">
-          </mat-form-field>
-          <span class="block text-center" style="margin-top: -20px;" *ngIf="chiResult == true">Es válida</span>
-          <span class="block text-center" style="margin-top: -20px;" *ngIf="chiResult == false">No es válida</span>
-        </div>
+      
 
-        <div class="block ml-5 test-container" id="kolmogorov-container" style="height: fit-content;">
-          <mat-checkbox (change)="onChange($event, 'kolmogorov')" class="block m-2">Realizar prueba Kolmogorov-Smirnov</mat-checkbox>
-          <mat-form-field *ngIf="validKolmogorov" appearance="outline" class="input block m-2">
-            <mat-label>Aceptación del %</mat-label>
-            <input matInput name="errorKol" placeholder="5" value="10" [(ngModel)]="errorKol">
-          </mat-form-field>
-          
-          
-        </div>
-
-        
-
-    </div>
-        
-        <table class="table-fixed m-auto mt-5">
-            <thead>
-              <tr>
-                <th class="w-1/4 px-4 py-2">Semilla</th>
-                <th class="w-1/4 px-4 py-2">No. Aleatorio</th>
-                <th class="w-1/4 px-4 py-2">Random Ri</th>
-              </tr>
-            </thead>
-            <tbody *ngFor="let number of result; let i = index" @fadeIn>
-              <tr>
-                <td class="border px-4 py-2">X{{i}} = {{semilla[i]}}</td>
-                <td class="border px-4 py-2">X{{i+1}} = {{random[i]}}</td>
-                <td class="border px-4 py-2">R{{i+1}} = {{number}}</td>
-              </tr>
-            </tbody>
-          </table>
-    
-    </div>
+  </div>
+      
+      <table class="table-fixed m-auto mt-5">
+          <thead>
+            <tr>
+              <th class="w-1/4 px-4 py-2">Semilla</th>
+              <th class="w-1/4 px-4 py-2">No. Aleatorio</th>
+              <th class="w-1/4 px-4 py-2">Random Ri</th>
+            </tr>
+          </thead>
+          <tbody *ngFor="let number of result; let i = index" @fadeIn>
+            <tr>
+              <td class="border px-4 py-2">X{{i}} = {{semilla[i]}}</td>
+              <td class="border px-4 py-2">X{{i+1}} = {{random[i]}}</td>
+              <td class="border px-4 py-2">R{{i+1}} = {{number}}</td>
+            </tr>
+          </tbody>
+        </table>
+  
+  </div>
