--- a/src/app/components/congruencial-mixto/congruencial-mixto.component.scss
+++ b/src/app/components/congruencial-mixto/congruencial-mixto.component.scss
@@ -1,20 +1,14 @@
-/*mat-form-field{
-    color: white !important;
-    
+.green{
+    border-radius: 5px;
+    background-color: #63bb7a59;
 }
 
-.input mat-label{
-    color: #748AA1;
+.red{
+    border-radius: 5px;
+    background-color: #ff90908f;
 }
 
-.input mat-label label{
-    color: #748AA1;
+.test-container{
+    border-radius: 5px;
+    border: 1px solid #ababab;
 }
-
-::placeholder {
-    color: #748AA1 !important;
-}
-
-  
-
-*/
