--- a/src/app/components/congruencial-lineal-combinado/congruencial-lineal-combinado.component.html
+++ b/src/app/components/congruencial-lineal-combinado/congruencial-lineal-combinado.component.html
@@ -1,55 +1,67 @@
 <div class="container-right">
 
     <span class="text-4xl mt-5 block">Congruencial lineal combinado</span>
-      <!--<mat-form-field class="example-full-width">
-        <mat-label>Semilla</mat-label>
-        <input matInput placeholder="1234">
-      </mat-form-field>-->
+
     
-      <div class="input-container flex justify-between mt-5">
-      <mat-form-field appearance="outline" class="input w-1/2 mr-5">
-        <mat-label>Semilla</mat-label>
-        <input matInput placeholder="4" #seed>
-      </mat-form-field>
-    
-      <mat-form-field appearance="outline" class="input w-1/2 ml-5">
+    <div class="input-container flex justify-between mt-5">    
+      <mat-form-field appearance="outline" class="input w-1/2">
         <mat-label>Cantidad de números random</mat-label>
         <input matInput placeholder="10" #quantity>
       </mat-form-field>
-    </div>
 
-    <div class="input-container flex justify-between">
-        <mat-form-field appearance="outline" class="input w-1/3 mr-5">
+
+     <mat-form-field appearance="outline" class="input w-1/2 ml-5">
+      <mat-label>Módulo del generador final</mat-label>
+      <input matInput placeholder="12" #modulo>
+    </mat-form-field>
+
+
+    </div>
+  
+  <div >
+    <div *ngFor="let random of nRandoms; let i = index" @fadeIn class="input-container flex justify-between">
+      <mat-form-field appearance="outline" class="input w-1/5 mr-5">
+        <mat-label>Semilla</mat-label>
+        <input matInput placeholder="4" (keyup)="onKeySeed($event,i)">
+      </mat-form-field> 
+
+        <mat-form-field appearance="outline" class="input w-1/5 mr-5">
           <mat-label>Valor de a</mat-label>
-          <input matInput placeholder="5" #a>
+          <input matInput placeholder="5" (keyup)="onKeyA($event,i)">
         </mat-form-field>
       
-        <mat-form-field appearance="outline" class="input w-1/3 ml-5 mr-5">
+        <mat-form-field appearance="outline" class="input w-1/5 mr-5">
           <mat-label>Valor de c</mat-label>
-          <input matInput placeholder="7" #c>
+          <input matInput placeholder="7" (keyup)="onKeyC($event,i)">
         </mat-form-field>
 
-        <mat-form-field appearance="outline" class="input w-1/3 ml-5">
+        <mat-form-field appearance="outline" class="input w-1/5 mr-5">
             <mat-label>Valor de m</mat-label>
-            <input matInput placeholder="8" #m>
-          </mat-form-field>
+            <input matInput placeholder="8" (keyup)="onKeyM($event,i)">
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="input w-1/5 mr-5">
+          <mat-label>Operador</mat-label>
+          <input matInput placeholder="+-/*" (keyup)="onKeyOperador($event,i)">
+        </mat-form-field>
+
 
       </div>
-    
-        <button (click)="congruencial(seed.value, quantity.value, a.value, c.value, m.value)" mat-raised-button color="accent">Generar aleatorios</button>
+    </div>      
+
+      <button (click)="addNewGenerator()" mat-raised-button color="accent">add Generator</button>
+      <button (click)="linealCombinado(quantity.value, modulo.value)" mat-raised-button color="accent">Generar aleatorios</button>
         
         <table class="table-fixed m-auto mt-5">
             <thead>
               <tr>
-                <th class="w-1/4 px-4 py-2">Semilla</th>
-                <th class="w-1/4 px-4 py-2">No. Aleatorio</th>
+                <th class="w-1/4 px-4 py-2">n</th>
                 <th class="w-1/4 px-4 py-2">Random Ri</th>
               </tr>
             </thead>
             <tbody *ngFor="let number of result; let i = index" @fadeIn>
               <tr>
-                <td class="border px-4 py-2">X{{i}} = {{semilla[i]}}</td>
-                <td class="border px-4 py-2">X{{i+1}} = {{random[i]}}</td>
+                <td class="border px-4 py-2">{{i}}</td>
                 <td class="border px-4 py-2">R{{i+1}} = {{number}}</td>
               </tr>
             </tbody>
