--- a/src/app/components/congruencial-mixto/congruencial-mixto.component.html
+++ b/src/app/components/congruencial-mixto/congruencial-mixto.component.html
@@ -66,7 +66,7 @@
     </div>
 
 
-        <table class="table-fixed m-auto mt-5">
+        <table *ngIf="result.length > 0" class="table-fixed m-auto mt-5">
             <thead>
               <tr>
                 <th class="w-1/4 px-4 py-2">Semilla</th>
