Change app name to SIMULADOR DE NUMEROS Random

--- a/src/app/components/congruencial-mixto/congruencial-mixto.component.html
+++ b/src/app/components/congruencial-mixto/congruencial-mixto.component.html
@@ -37,7 +37,7 @@
       </div>
     
       <div class="flex">         
-        <button class="h-10" (click)="congruencial(seed.value, quantity.value, a.value, c.value, m.value)" mat-raised-button color="accent">Generar aleatorios</button>
+        <button class="h-10" (click)="congruencial(seed.value, quantity.value, a.value, c.value, m.value)" mat-raised-button color="accent">Generar</button>
   
         <div class="block ml-5 test-container" id="chi-container" style="height: fit-content;">
           <mat-checkbox (change)="onChange($event, 'chi')" class="block m-2">Realizar prueba Chi-Cuadrada</mat-checkbox>
