--- a/src/app/components/multiplicativo/multiplicativo.component.html
+++ b/src/app/components/multiplicativo/multiplicativo.component.html
@@ -31,7 +31,7 @@
 
       </div>
       <div class="flex">         
-        <button class="h-10" (click)="multiplicativo(seed.value, quantity.value, a.value, m.value)" mat-raised-button color="accent">Generar aleatorios</button>
+        <button class="h-10" (click)="multiplicativo(seed.value, quantity.value, a.value, m.value)" mat-raised-button color="accent">Generar</button>
   
         <div class="block ml-5 test-container" id="chi-container" style="height: fit-content;">
           <mat-checkbox (change)="onChange($event, 'chi')" class="block m-2">Realizar prueba Chi-Cuadrada</mat-checkbox>
